--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,11 @@ android {
 
 dependencies {
 
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //definizione versioni
     def nav_version = "2.3.0"
     def room_version = "2.3.0"
+    def lifecycle_version = "2.3.1"
+    def activity_version = "1.2.3"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
@@ -52,10 +54,20 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //implementazione navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //implementazione room
     implementation"androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    //implementazione viewmodel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    //implementazione activity
+    implementation "androidx.activity:activity-ktx:$activity_version"
 
 
 
