V 0.08 - implementation SmallCard.kt - minor fix

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,10 @@ plugins {
     id 'kotlin-android'
 
 }
+
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -33,7 +35,9 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        dataBinding true
         viewBinding true
+
     }
 }
 
